Enhance project structure by adding Header and Footer components, implementing AuthDialog for user authentication, and updating the main page layout. Introduce new dependencies for MUI icons and jotai state management. Update TypeScript configuration for module path resolution.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,12 @@
     "jsx": "preserve",
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "app/*"
+      ]
+    },
     "plugins": [
       {
         "name": "next"
