--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
+    "@mui/icons-material": "^7.3.5",
     "@mui/material": "latest",
+    "jotai": "^2.15.1",
     "next": "14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
