--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "latest",
     "jotai": "^2.15.1",
+    "katex": "^0.16.25",
     "next": "14.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-markdown": "^10.1.0",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "24.10.1",
