Update package.json to change development and start scripts to use port 3002; rename logo asset for consistency in layout.tsx. Ensure adherence to TypeScript standards and maintain compatibility with Next.js 14 App Router.

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3002",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3002",
     "update:deps": "npm update --save",
     "check:compatibility": "npm audit && npx npm-check-updates",
     "ai:setup": "npx create-next-app@latest . --typescript --tailwind --eslint --app --src-dir --import-alias \"@/*\" --use-npm"
