Обновлен конфигурационный файл Next.js для поддержки новых форматов изображений (AVIF, WebP) и добавлены зависимости для работы с библиотекой sharp. Обновлены пути к аватарам и другим изображениям на WebP в компонентах и документации. Все изменения соответствуют стандартам TypeScript и Material-UI.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,10 @@
         "app/*"
       ]
     },
+    "typeRoots": [
+      "./types",
+      "./node_modules/@types"
+    ],
     "plugins": [
       {
         "name": "next"
