--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev -p 3002",
     "build": "next build",
+    "analyze": "ANALYZE=true next build",
     "start": "next start -p 3002",
     "update:deps": "npm update --save",
     "check:compatibility": "npm audit && npx npm-check-updates",
@@ -26,6 +27,7 @@
     "sharp": "^0.34.5"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.0.0",
     "@types/node": "24.10.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
